crates/control/tests/it/snapshots/it__connectors__connectors_create_test.snap
---
source: crates/control/tests/it/connectors.rs
assertion_line: 74
expression: "response.json::<JsonValue>().await.unwrap()"

---
{
  "data": {
    "created_at": "[datetime]",
    "description": "Reads data from Kafka topics.",
    "id": "[id]",
    "name": "Kafka",
    "owner": "Estuary Technologies",
    "type": "source",
    "updated_at": "[datetime]"
  }
}
