crates/control/tests/it/snapshots/it__connectors__create_test.snap
---
source: crates/control/tests/it/connectors.rs
assertion_line: 40
expression: redactor.response_json(response).await.unwrap()

---
{
  "data": {
    "attributes": {
      "created_at": "[datetime]",
      "description": "Reads from a Kafka topic",
      "id": "[c1]",
      "maintainer": "Estuary Technologies",
      "name": "Kafka",
      "type": "source",
      "updated_at": "[datetime]"
    },
    "id": "[c1]",
    "links": {
      "images": "http://127.0.0.1:0/connectors/[c1]/connector_images",
      "self": "http://127.0.0.1:0/connectors/[c1]"
    },
    "type": "connector"
  }
}
