crates/control/tests/it/snapshots/it__connectors__duplicate_insertion_test.snap
---
source: crates/control/tests/it/connectors.rs
assertion_line: 198
expression: "second_response.json::<JsonValue>().await.unwrap()"

---
{
  "errors": [
    {
      "detail": "error returned from database: duplicate key value violates unique constraint \"idx_connectors_name\"",
      "title": "database error"
    }
  ]
}
