crates/control/tests/it/snapshots/it__connectors__index_test.snap
---
source: crates/control/tests/it/connectors.rs
assertion_line: 42
expression: redactor.response_json(response).await.unwrap()

---
{
  "data": [
    {
      "attributes": {
        "created_at": "[datetime]",
        "description": "A flood greetings.",
        "id": "[c1]",
        "maintainer": "Estuary Technologies",
        "name": "Hello World",
        "type": "source",
        "updated_at": "[datetime]"
      },
      "id": "[c1]",
      "links": {
        "images": "http://127.0.0.1:0/connectors/[c1]/connector_images",
        "self": "http://127.0.0.1:0/connectors/[c1]"
      },
      "type": "connector"
    }
  ],
  "links": {
    "self": "http://127.0.0.1:0/connectors"
  }
}
