crates/control/tests/it/snapshots/it__connectors__list_connectors_works.snap
---
source: crates/control/tests/it/connectors.rs
assertion_line: 17
expression: "response.json::<JsonValue>().await.unwrap()"

---
[
  {
    "description": "A flood of greetings.",
    "image": "ghcr.io/estuary/source-hello-world",
    "name": "source-hello-world",
    "owner": "Estuary",
    "tags": [
      "dev"
    ],
    "type": "source"
  }
]
